fix toolbar z-index

--- a/protected/scss/_toolbar.scss
+++ b/protected/scss/_toolbar.scss
@@ -3,16 +3,16 @@
 	position: fixed;
 	left: 10px;
 	bottom: 50px;
-	z-index: 1050;
+	z-index: 2000;
 }
 #sy-page-topbar {
 	position: fixed;
 	top: 10px;
 	right: 0;
-	z-index: 1050;
+	z-index: 2000;
 }
 #sy-page-bottombar {
 	position: fixed;
 	bottom: 0;
-	z-index: 1050;
+	z-index: 2000;
 }
